# REPDPrototype

./: .gitignore  LICENSE  README.md  analyze_repos.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-tests.yml
docs/: comparison_results.md  model_description.md
repd/: __init__.py  change_coupling.py  change_coupling_analyzer.py  cli.py  developer_activity.py  entry_point_analyzer.py  entry_point_detector.py  model.py  repository.py  risk_calculator.py  structure_mapper.py  visualization.py
repd_analysis_results/buildship/: report.html  results.json
repd_analysis_results/openj9/: report.html
repd_analysis_results/openjdk/: report.html
repd_output/: report.html  results.json
tests/: __init__.py  test_change_coupling.py  test_cli.py  test_entry_points.py  test_model.py  test_repository.py  test_risk_calculator.py
